// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: A/B Test View Mode should render cancelled status correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "component": [Function],
      "content": "Edit and Reschedule Test",
      "to": Object {
        "pathname": "/ab-testing/id-1/5",
        "search": "?subaccount=101",
        "state": Object {
          "rescheduling": true,
        },
      },
    }
  }
  secondaryActions={
    Array [
      Object {
        "content": <span>
          <Save />
           Override with new draft
        </span>,
        "onClick": [Function],
        "visible": true,
      },
      Object {
        "content": "cancel test",
        "onClick": [MockFunction],
      },
      Object {
        "content": "delete test",
        "onClick": [MockFunction],
      },
    ]
  }
  title="my ab test 1"
>
  <Section
    title="Status"
  >
    <Left>
      <StatusContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <withRouter(Connect(StatusPanel))
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
      <StatusView
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Settings"
  >
    <Left>
      <SettingsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <SettingsView
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Variants"
  >
    <Left>
      <VariantsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <VariantsView
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "cancelled",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <ConfirmationModal
    confirmVerb="OK"
    content={
      <p>
        The test will be updated and placed into draft state. Messages will be delivered to the default template.
      </p>
    }
    onCancel={[Function]}
    onConfirm={[Function]}
    open={false}
    title="Are you sure you want to override the winning template for this test?"
  />
</Page>
`;

exports[`Page: A/B Test View Mode should render completed status correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={
    Object {
      "component": [Function],
      "content": "Edit and Reschedule Test",
      "to": Object {
        "pathname": "/ab-testing/id-1/5",
        "search": "?subaccount=101",
        "state": Object {
          "rescheduling": true,
        },
      },
    }
  }
  secondaryActions={
    Array [
      Object {
        "content": <span>
          <Save />
           Override with new draft
        </span>,
        "onClick": [Function],
        "visible": true,
      },
      Object {
        "content": "cancel test",
        "onClick": [MockFunction],
      },
      Object {
        "content": "delete test",
        "onClick": [MockFunction],
      },
    ]
  }
  title="my ab test 1"
>
  <Section
    title="Status"
  >
    <Left>
      <StatusContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <withRouter(Connect(StatusPanel))
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
      <StatusView
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Settings"
  >
    <Left>
      <SettingsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <SettingsView
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Variants"
  >
    <Left>
      <VariantsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <VariantsView
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "completed",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <ConfirmationModal
    confirmVerb="OK"
    content={
      <p>
        The test will be updated and placed into draft state. Messages will be delivered to the default template.
      </p>
    }
    onCancel={[Function]}
    onConfirm={[Function]}
    open={false}
    title="Are you sure you want to override the winning template for this test?"
  />
</Page>
`;

exports[`Page: A/B Test View Mode should render running status correctly 1`] = `
<Page
  empty={Object {}}
  primaryAction={null}
  secondaryActions={
    Array [
      Object {
        "content": <span>
          <Save />
           Override with new draft
        </span>,
        "onClick": [Function],
        "visible": false,
      },
      Object {
        "content": "cancel test",
        "onClick": [MockFunction],
      },
      Object {
        "content": "delete test",
        "onClick": [MockFunction],
      },
    ]
  }
  title="my ab test 1"
>
  <Section
    title="Status"
  >
    <Left>
      <StatusContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <withRouter(Connect(StatusPanel))
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
      <StatusView
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Settings"
  >
    <Left>
      <SettingsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <SettingsView
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <Section
    title="Variants"
  >
    <Left>
      <VariantsContent
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Left>
    <Right>
      <VariantsView
        subaccountId="101"
        test={
          Object {
            "default_template": Object {
              "template_id": "ab-test-1",
            },
            "id": "id-1",
            "name": "my ab test 1",
            "status": "running",
            "updated_at": "2018-10-21T10:10:10.000Z",
            "version": 5,
          }
        }
      />
    </Right>
  </Section>
  <ConfirmationModal
    confirmVerb="OK"
    content={
      <p>
        The test will be updated and placed into draft state. Messages will be delivered to the default template.
      </p>
    }
    onCancel={[Function]}
    onConfirm={[Function]}
    open={false}
    title="Are you sure you want to override the winning template for this test?"
  />
</Page>
`;
